# precalculate

./: .travis.yml  CODE_OF_CONDUCT.md  README.md  precalculate.py  pyproject.toml  test_precalculate.py
